<?xml version="1.0"?>
<package>
  <name>pose_publisher</name>
  <version>0.1.3</version>
  <description>This package provides the current position and orientation of the robot in the map with PoseWithCovarianceStamped format.</description>

  <author email="zhi.yan@ai.univ-paris8.fr">Zhi Yan</author>
  <maintainer email="smoreno@robotnik.es">Sandra Moreno</maintainer>
  <maintainer email="ggari@robotnik.es">Guillem Gari</maintainer>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/pose_publisher</url>
  <url type="repository">https://github.com/RobotnikAutomation/pose_publisher.git</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>
